# World-Cup-26

./: .env.conductor.example  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BETFAIR_UPGRADE_PLAN.md  CHANGELOG.md  CLAUDE.md  EXECUTION_CHECKLIST.md  LIVE_TONIGHT.md  PROMPT_1_BETFAIR_REST.md  PROMPT_2_BETFAIR_WSS.md  PROMPT_3_ODDS_AGGREGATOR.md  README.md  SETUP_AUDIT.md  TODO.md  World_Cup_2026_Calendar_Bahrain.ics  polymarket_bets.json  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
backtests/: PLAYER_AWARE_BACKTEST.md  blend_fit.py  early_response_backtest.py  elo_k_fit.py  halflife_backtest.py  player_aware_scorer_backtest.py  sportsbook_odds_audit.py  structural_prior_backtest.py  wc2022_odds_pull.py
data/: advancement_current_vs_pretournament.csv  advancement_current_vs_pretournament.json  advancement_latest.json  advancement_models.pkl  advancement_models.prev.pkl  advancement_played_results.json  advancement_sim_pins.json  audit.json  betbuilder_latest.json  betbuilder_latest.md  card_latest.md  corrections.json  corrections_review.json  dc_params_corrected.json  deleted_bets_backup_2026-06-19.json  elo_ratings_corrected.json  goalscorers_latest.md  hl_xvenue_history.jsonl  intel_polling.yml  model_picks_latest.md  model_predictions.json  model_predictions_log.jsonl  next_latest.md  players.json  pm_closes.json  pm_exactscore_cache.json  pm_inplay_proposals.json  pm_price_history.jsonl  prop_calibration.json  recompute_report.csv  recompute_report.txt  recompute_summary.json  squads.json  wca.db-shm
deploy/: README.md  check_connectivity.sh  install_services.sh  publish_site.sh  sync.sh
docs/: ARCHITECTURE.md  CURRENT_STATE.md  FABLE_OVERHAUL_PROMPT.md  FABLE_PLAN_2026-07-05.md  HANDOFF_2026-07-03.md  OPERATIONS.md  SELECTION_RULES.md  cashout.md  data-and-artifacts.md  market_intelligence_deliverables.md  market_intelligence_design.md  notion_setup.md  pm_snapshot_guide.md  polymarket_v2_funding.md  sheets_setup.md
jupyter bet/: .gitignore  README.md  config.example.yaml  overrides.yaml
logs/: feedpull.out
reports/: 20260701_48h_change_exposure_audit.md  _build_report.py  audit_20260701_pm_analytics.json  benchmark_latest.json  benchmark_latest.md
scripts/: acca_coverage_optimizer.py  build_benchmarks.py  gen_wc_calendar.py  generate_kelly_analysis.py  gh_pr.sh  pm_orderflow_ingest.py  serve_analytics.py  serve_site.py  wca_advancement.py  wca_advancement_data.py  wca_advancement_history.py  wca_arb.py  wca_arb_data.py  wca_arb_history.py  wca_archive.py  wca_backfill_accounts.py  wca_backfill_model.py  wca_backfill_pm_ev.py  wca_benchmark.py  wca_betbuilder.py  wca_betrecs.py  wca_bot.py  wca_build_accas.py  wca_build_analytics.sh  wca_build_card.py  wca_build_players_db.py  wca_build_wc2026_results.py  wca_canon_venues.py  wca_cashout_watch.py  wca_clean_results.py  wca_cli.py  wca_close_capture.py  wca_clvbench_data.py  wca_conductor.py  wca_dc_goal_calibration.py  wca_edge_desk.py  wca_event_ev.py  wca_event_markets.py  wca_event_scan.py  wca_exposure_data.py  (+81 more)
site/: adv_edge_matrix.js  advancement_data.json  advancement_edge_desk.json  advancement_history.json  app.js  arb-theme.css  arb.html  arb.js  arb_data.json  arb_history.json  architecture.html  architecture.js  benchmarks.html  benchmarks.js  benchmarks_data.json  bet_recs.json  data.json  edge_desk.json  event_market_recs.json  exposure_dashboard.json  exposure_data.json  forest.html  forest.js  forest_data.json  hl_xvenue.json  index.html  linemove.json  microstructure.css  microstructure.html  microstructure.js  pm_ideas.json  promos.html  promos.js  promos_data.json  scores.html  scores.js  scores_data.json  scores_markets.json  shadow-book.html  shadow-book.js  (+10 more)
site-analytics/: README.md  analytics.css  analytics.js  index.html  vercel.json
site-lilac/: .gitignore  _template.html  index.html
tests/: test_accas.py  test_accas_enhanced.py  test_account_source.py  test_advancement.py  test_advancement_consistency.py  test_advancement_data_side.py  (+180 more)
(+1256 files in other folders)
