[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wca"
version = "0.1.0"
description = "World Cup Alpha - quantitative betting research platform for the 2026 FIFA World Cup"
requires-python = ">=3.9"
# pyarrow powers the data-archival parquet pipeline (src/wca/archive). The
# archive degrades to a no-op if it is somehow absent, but it ships as a
# runtime dep so the TEE hooks actually persist on the mini + in CI.
dependencies = ["numpy", "scipy", "pandas", "requests", "pyarrow>=14"]

[project.optional-dependencies]
# Optional cloud mirror for the archive (Cloudflare R2 / Backblaze B2 / S3).
# Only needed when WCA_ARCHIVE_S3_* creds are configured; absent => local-only.
cloud = ["boto3>=1.34"]
# Notion ledger sync — needed on mini and anywhere wca_notion_setup.py runs.
# Imports are guarded so absence never crashes the rest of the stack.
notion = ["notion-client>=2.2"]
# Test-time dependencies beyond the runtime set in `dependencies` /
# requirements.txt. eth-account is needed by the Polymarket signing tests
# (tests/test_pm_*); matplotlib by the Telegram usage-chart test
# (tests/test_telegram_photo.py). Kept here so CI installs exactly what the
# suite imports. Pinned to the last versions that support Python 3.9.
dev = [
    "pytest==8.4.2",
    "eth-account==0.13.7",
    "matplotlib==3.9.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
